Correcciones y mejora de explicaciones | DB

--- a/4º Año/Bases de Datos/Unidad 1/1. Introducción.md
+++ b/4º Año/Bases de Datos/Unidad 1/1. Introducción.md
@@ -7,13 +7,13 @@
 Un sistema de gestión de bases de datos son una colección de programas que permiten a los usuarios crear y mantener una base de datos. El objetivo principal de estos sistemas es proporcionar una forma de ***almacenar y recuperar*** la información de una base de datos de manera ***práctica y eficiente***.
 Los sistemas de bases de datos ofrecen soluciones a los siguientes problemas de los sistemas de archivos convencionales:
 
-1. **Redundancia e Inconsistencia de Datos**: Diferentes formatos, duplicación de información en archivos diferentes.
-2. **Dificultad en Acceder a los Datos**: Se necesitan escribir un programa nuevo para cada nuevo requerimiento, haciendo que los datos estén dispersos en diferentes archivos.
-3. **Aislamiento de Datos**: Los datos están dispersos en varios archivos, y los archivos pueden estar en diferentes formatos.
-4. **Problemas de Integridad**: Las restricciones de consistencia se hacen cumplir con códigos de programas de aplicación. Es difícil agregar nuevas restricciones o cambiar las existentes.
-5. **Problemas de Atomicidad**: Las fallas pueden dejar las bases de datos en un estado inconsistente, por ejemplo, las actualizaciones parciales en una transferencia de fondos.
-6. **Anomalías en el Acceso Concurrente**: El acceso concurrente es necesario por cuestiones de rendimiento. Un acceso concurrente sin control, puede inducir a inconsistencias.
-7. **Problemas de Seguridad**: Los usuarios de un sistema de gestión de bases de datos deben poder acceder sólo a ciertos datos. En los programas de aplicación, es difícil garantizar tales restricciones de seguridad.
+1. **Redundancia e Inconsistencia de Datos**: En los sistemas de archivos convencionales, es común que la misma información se almacene en múltiples lugares causando una redundancia de datos. Esto puede llevar a diferencias entre estos datos causando una inconsistencia si no se actualizan simultáneamente. Los SGBD manejan esta problemática mediante la centralización de los datos y ofreciendo mecanismos para asegurar que todos los cambios se reflejen en toda la base, manteniendo la consistencia.
+2. **Dificultad en Acceder a los Datos**: Sin un SGBD, cada vez que se necesite una consulta específica, puede ser necesario desarrollar una aplicación o script específico. Esto hace que el acceso a los datos sea laborioso. Los SGBD ofrecen lenguajes de consulta que permiten a los usuarios recuperar y manipular datos de manera eficiente y sin necesidad de programación específica para cada consulta.
+3. **Aislamiento de Datos**: Los datos aislados en diferentes archivos y en formatos variados dificultan su gestión y acceso eficiente. Los SGBD reducen este problema al integrar todos los datos en una única estructura bien definida, facilitando su acceso y manejo.
+4. **Problemas de Integridad**: En sistemas basados en archivos, las restricciones de integridad dependen a menudo del código de la aplicación, lo que puede ser ineficiente y propenso a errores. Los SGBD gestionan las restricciones de integridad a nivel de base de datos, permitiendo que sean consistentes y no dependan del código de aplicación individual, facilitando la implementación de nuevas reglas y la modificación de las existentes.
+5. **Problemas de Atomicidad**: La atomicidad se refiere a la ejecución completa de todas las partes de una transacción. En sistemas sin un manejo adecuado, una falla podría dejar la base de datos en un estado inconsistente (por ejemplo, dinero retirado de una cuenta pero no depositado en otra). Los SGBD aseguran que las transacciones sean atómicas, es decir, que se completen en su totalidad o que no se realice ningún cambio.
+6. **Anomalías en el Acceso Concurrente**: El acceso concurrente es esencial para el rendimiento, pero puede causar problemas de integridad si no se maneja adecuadamente. Los SGBD implementan varios mecanismos de control de concurrencia, como bloqueos y versiones de timestamp, para asegurar que las transacciones concurrentes no interfieran incorrectamente entre sí.
+7. **Problemas de Seguridad**: La seguridad de los datos es crítica. Los sistemas basados en archivos pueden hacer que sea difícil restringir el acceso a los datos a nivel de usuario o de grupo. Los SGBD proporcionan sistemas sofisticados de control de acceso que permiten a los administradores configurar quién puede ver o modificar qué datos, en qué circunstancias.
 
 ### Visión de los Datos
 
@@ -47,6 +47,6 @@ El objetivo final de este sistema multinivel es lograr la separación de las apl
 En el área de las bases de datos existe una colección de herramientas conceptuales que se utilizan para describir los datos, las relaciones, la semántica y las restricciones de integridad.
 Existen diferentes modelos de datos, los cuales pueden ser agrupados en distintas categorías:
 
-- **Modelos de Datos de Alto Nivel o Conceptuales**: Disponen de conceptos muy cercanos al modo como la mayoría de los usuarios percibe los datos.
-- **Modelos de Datos de Bajo Nivel o Físico**: Describen detalles de cómo se almacenan los datos en el ordenador (para especialistas en informática).
-- **Modelos de Datos de Representación o Implementación**: Los conceptos pueden ser entendidos por los usuarios finales, aunque no están demasiado alejados a la forma en que los datos se organizan dentro del ordenador.
+- **Modelos de Datos de Alto Nivel o Conceptuales**: Estos modelos están diseñados para ser abstractos y generales, enfocados en cómo la mayoría de los usuarios entienden los datos. Usan conceptos como entidades, atributos y relaciones que reflejan la realidad del dominio del problema de forma intuitiva.
+- **Modelos de Datos de Bajo Nivel o Físico**: Estos modelos proporcionan una visión detallada de cómo los datos se organizan físicamente en el sistema de almacenamiento. Incluyen detalles como estructuras de almacenamiento específicas, índices, caminos de acceso a los datos y optimización del rendimiento. Son esenciales para los administradores de bases de datos y los diseñadores de sistemas, ya que afectan directamente el rendimiento y la eficiencia del almacenamiento de datos.
+- **Modelos de Datos de Representación o Implementación**: También conocidos como modelos semánticos. Abarcan conceptos que son comprensibles para los usuarios finales pero que también ofrecen una representación más cercana a cómo los datos se organizan en la base de datos.
