--- a/4º Año/Bases de Datos/Unidad 2/1. Modelo Entidad-Relacion.md
+++ b/4º Año/Bases de Datos/Unidad 2/1. Modelo Entidad-Relacion.md
@@ -1,6 +1,6 @@
 El modelo de entidad-relación se basa en la percepción del mundo real que consiste de un conjunto de objetos básicos llamados entidades y de relaciones entre esas entidades.
 Una ***entidad*** no es más que una cosa u objeto del mundo real que es distinguido entre los demás objetos. Por ejemplo, una persona, una empresa, entre otros. Por otro lado, se denomina ***conjunto de entidades*** a las agrupaciones de entidades de un mismo tipo. Por ejemplo, el conjunto de todas las personas, o de todas las empresas.
-Las entidades se representan mediante un conjunto de *atributos*, estos atributos describen propiedades que posee cada miembro de un conjunto de entidades. Existen distintos tipos de atributos:
+Las entidades se representan mediante un conjunto de *atributos*, estos atributos describen propiedades que posee cada miembro de un conjunto de entidades y pueden ser de distintos tipos:
 
 - Simples y Compuestos
 - Monovalorados y Multivalorados
@@ -20,14 +20,13 @@ Las ***restricciones***, por otro lado, expresan la cantidad de entidades a las 
 En bases de datos, las claves son atributos de las entidades que se utilizan para referirse a una entidad particular dentro de un *conjunto de entidades*, existen varios tipos de claves:
 
 - **Superclave**: Es el conjunto de una o más atributos cuyos valores determinan inequívocamente cada entidad, es decir, el valor de ese atributo o atributos son únicos para cada una de las entidad del conjunto.
-- **Clave Candidata**: Son los atributos de una entidad que son una superclave minimal, es decir, aspiran a convertirse en superclave.
+- **Clave Candidata**: Son los atributos de una entidad que son una superclave minimal, es decir, tiene la mínima cantidad de atributos necesaria para que pueda identificar inequívocamente a cada entidad, por ejemplo, el número de matrícula de un estudiante es una clave candidata, ya que mediante ese atributo se puede identificar a cada uno de los estudiantes.
 
 Aunque puedan existir varias claves candidatas, solo una de estas se establece como ***clave primaria***.
 
 >[!tldr] Claves para Conjuntos de Relaciones
 >La estructura de la clave primaria para el conjunto de relaciones depende de la correspondencia de cardinalidades asociada al conjunto de relaciones.
 >- Si la relación es de varios a varios, la clave primaria del conjunto de relaciones estará compuesta por en par de 2 o $n$ elementos, cuyos componentes serán las claves primarias de los conjuntos de entidades que participan en la relación.
->- Si la relación es de uno a varios, la clave primaria del conjunto de relaciones estará compuesta por la clave primaria de la entidad con cardinalidad \*.
 
 ### Conjunto de Entidades Débiles
 
