--- a/4º Año/Bases de Datos/Unidad 2/2. Modelo Entidad-Relacion Extendido.md
+++ b/4º Año/Bases de Datos/Unidad 2/2. Modelo Entidad-Relacion Extendido.md
@@ -1,15 +1,11 @@
 
 Debido a las limitaciones a la hora de realizar el modelado de datos con el modelo entidad-relación, este fue extendido agregando ciertas funcionalidades extra.
 
-## Especialización
+## Especialización y Generalización
 
-Es un proceso de diseño top-down donde un conjunto de entidades puede incluir **subgrupos** de entidades que se diferencian de alguna forma de las otras entidades del conjunto. Estos subgrupos resultan en conjuntos de entidades de ***menor nivel*** que tienen atributos o participan en relaciones que no son aplicables al conjunto de entidades de nivel
-superior.
-Los conjuntos de entidades de menor nivel heredan todos los atributos y participan en todas las relaciones del conjunto de entidades de nivel superior.
-
-## Generalización
-
-Es un proceso de diseño bottom-up donde se combina un número de conjuntos de entidades que comparten un conjunto de características en conjunto de entidades de nivel superior.
+La especialización es un proceso de diseño top-down donde un conjunto de entidades puede incluir **subgrupos** de entidades que se diferencian de alguna forma de las otras entidades del conjunto. Estos subgrupos resultan en conjuntos de entidades de ***menor nivel*** que tienen atributos o participan en relaciones que no son aplicables al conjunto de entidades de nivel superior.
+Por otro lado, la generalización es un proceso de diseño bottom-up donde se combina un número de conjuntos de entidades que comparten un serie de características, definiendo así conjunto de entidades de nivel superior del que forman parte o pertenecen.
+Ya sea en la especialización o generalización, los conjuntos de entidades de menor nivel heredan todos los atributos y participan en todas las relaciones del conjunto de entidades de nivel superior.
 
 >[!tldr] Diferencias entre Especialización y Generalización
 >Especialización y generalización son simples inversiones, estas son representadas en un diagrama E-R de la misma forma, a través de un triángulo invertido. La diferencia entre ambos radica en la forma de establecer la relación entre los distintos niveles de entidades.
