--- a/4º Año/Bases de Datos/Unidad 5/1. Seguridad en Bases de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 5/1. Seguridad en Bases de Datos.md
@@ -2,14 +2,14 @@
 Al momento de operar una base de datos, existen una serie de factores que pueden amenazar la seguridad de esta, entre ellas se encuentra la pérdida de integridad, pérdida de disponibilidad, debido a que no se cuenta con los provilegios necesarios para acceder a los objetos, o la pérdida de confidencialidad. La confidencialidad de la base de datos tiene relación con la protección de los datos frente al acceso no autorizado.
 Dentro de los mecanismos que nos proporcionan las bases de datos se encuentran los controles de acceso, que le permiten a los administradores otorgar permisos a los distintos usuarios que pueden acceder a las bases de datos, este control de acceso puede ser:
 
-- **Discrecional**. Conceden privilegios a usuarios, incluyendo las capacidades de acceder a archivos de datos específicos, registros o campos en un modo determinado.
-- **Obligatorios**. Fuerzan una seguridad multi-nivel, clasificando a los datos y a los usuarios en diferentes clases.
+- **Discrecional**. Este tipo de control de acceso se basa en la idea de que los propietarios de los recursos tienen la autoridad para otorgar o restringir el acceso a otros usuarios según lo consideren necesario. Conceden privilegios a usuarios, incluyendo las capacidades de acceder a archivos de datos específicos, registros o campos en un modo determinado. Esto le permite a los distintos usuarios de las bases de datos otorgar privilegios de forma específica.
+- **Obligatorios**. Impone políticas de seguridad más estrictas que son administradas no por los propietarios de los datos, sino por regulaciones rigurosas que no pueden ser modificadas por usuarios individuales. Este modelo clasifica tanto los datos como los usuarios en diferentes niveles de seguridad y sólo permite el acceso a los datos si el usuario tiene un nivel de seguridad igual o superior al del dato que intenta acceder.
 
 >[!tldr] Categorías de Seguridad de Acuerdo al Control de Acceso
 >- **Seguridad del sistema**: La seguridad del sistema abarca el acceso y el uso de la base de datos a nivel del sistema, como el nombre de usuario y la contraseña, el espacio en disco asignado a los usuarios u operaciones del sistema que pueden realizar los usuarios.
->- **Seguridad de los datos**: La seguridad de la base de datos abarca el acceso y el uso de los objetos de base de datos como a las acciones que los usuarios pueden realizar con los objetos.
+>- **Seguridad de los datos**: La seguridad de la base de datos abarca el acceso y el uso de los objetos de la base de datos como a las acciones que los usuarios pueden realizar con los objetos.
 
-El usuario DBA es un usuario de nivel superior que tiene los priviligios necesarios para crear usuarios y otorgarles acceso tanto a la base de datos en general como a sus objetos en particular. Los privilegios en si mismo otorgan derechos a los usuarios a ejecutar determinados sentencias SQL. Los distintos usuarios de las bases de datos necesitan tanto privilegios de sistema para poder acceder a la base de datos, como privilegios de objetos para poder crear y manipular los diferentes objetos de la base de datos. Además el administrador puede otorgar privilegios para que otros usuarios otorguen privilegios.
+El usuario DBA es un usuario de nivel superior que tiene los privilegios necesarios para crear usuarios y otorgarles acceso tanto a la base de datos en general como a sus objetos en particular. Los privilegios en si mismo otorgan derechos a los usuarios a ejecutar determinados sentencias SQL. Los distintos usuarios de las bases de datos necesitan tanto privilegios de sistema para poder acceder a la base de datos, como privilegios de objetos para poder manipular y acceder a los diferentes objetos de la base de datos. Además el administrador puede otorgar privilegios para que otros usuarios otorguen privilegios.
 
 >[!note] Diferencias en el Control de Acceso entre Oracle y PostgreSQL
 >Oracle a diferencia de Postgres tiene una variedad más amplia de permisos que pueden ser otorgados y revocados a los distintos usuarios. Por ejemplo en Oracle existe el privilegio de `CREATE SESSION`, sin este permiso el usuario no podrá conectarse a la base de datos. Además de eso Postgres no posee un mecanismo para crear usuarios como tal, sino que utiliza solo roles para asignar los privilegios, los roles que tengan derecho a `LOGIN` son lo que se consideran usuarios.
@@ -42,11 +42,11 @@ En algunas ocasiones se necesita `CASCADE` para eliminar todas las restricciones
 
 ## Bases de Datos Estadísticas
 
-Las bases de datos estadísticas son aquellas que proveen datos en forma de un conjunto, es decir, no permiten obtener la información de datos individuales de los diferentes usuarios o entidades. En pocas palabras estas bases de datos prohíbe el realizar consultas a atributos particulares, solo permite acceder a datos calculados mediante funciones de agregación. Aunque en algunos casos en posible inferir los valores de campos particulares a partir de estas consultas estadísticas.
+Las bases de datos estadísticas son aquellas diseñadas para proporcionar datos en un formato agregado o resumido, en lugar de permitir el acceso a información detallada de individuos o entidades específicas. Estas bases de datos están configuradas para limitar las consultas a funciones de agregación como sumas, promedios, y conteos, protegiendo así la privacidad y evitando la identificación de datos a nivel individual. Aunque generalmente no permiten acceder directamente a atributos particulares, en algunos casos es posible inferir información sobre campos específicos a partir de las consultas estadísticas, lo que plantea desafíos adicionales en términos de seguridad y privacidad de los datos.
 
 ## Encriptación
 
 La encriptación es un medio de mantener datos seguros en un entorno inseguro. Consiste en aplicar un algoritmo de encriptación de datos usando alguna clave de encriptación. Los datos resultantes tienen que ser desencriptados usando una clave de desencriptado para recuperar los datos originales.
 Algunos de los algoritmos más conocidos son el AES y el DES, aunque este último a sufrido una serie de cambios a lo largo de los años debido a que podía llegar a ser desencriptado con relativa facilidad.
-En 1976 Diffie and Hellman propusieron un nuevo tipo de criptosistema, que denominaron **encriptación de clave pública**, este método está basado en funciones matemáticas y no en operaciones sobre patrones de bits. En este esquema se posee una clave privada de la que se deriva la clave pública, los mensajes a escriptar se encriptan con la clave pública y se desencriptan con la clave privada.
+En 1976 Diffie and Hellman propusieron un nuevo tipo de criptosistema, que denominaron **encriptación de clave pública**, este método está basado en funciones matemáticas y no en operaciones sobre patrones de bits. En este esquema se posee una clave privada de la que se deriva la clave pública, los mensajes se encriptan con la clave pública y se desencriptan con la clave privada.
 Las bases de datos cuentan con varias funciones criptográficas que emplean algunos de estos algoritmos antes mencionados, los cuales pueden ser utilizados para ocultar información sensible.
