Correcciones y arreglos v4 | DB, Redes

--- a/4º Año/Bases de Datos/Unidad 3/1. Modelo Relacional.md
+++ b/4º Año/Bases de Datos/Unidad 3/1. Modelo Relacional.md
@@ -41,7 +41,7 @@ $$
 
 Al modelo se le agregaron un conjunto de operaciones adicionales, las cuales no añaden nuevas propiedades al álgebra, sino que simplifican las consultas. Estas operaciones son:
 
-- **Intersección de Conjuntos**. Formalmente denotado como $r \cap s$, donde $r$ y $s$ son relaciones. Al igual que la unión y la diferencia, la intersección requiere que se satisfagan las mismas características, es decir, que los conjuntos tengan la misma aridad y el mismo dominio para todos sus $i$ atributos. Se define como:
+- **Intersección de Conjuntos**. Formalmente denotado como $r \cap s$, donde $r$ y $s$ son relaciones. Al igual que la unión y la diferencia, la intersección requiere que se satisfagan las mismas condiciones, es decir, que los conjuntos tengan la misma aridad y el mismo dominio para todos sus $i$ atributos. Se define como:
 $$
 r \cap s = \{t|t\in r \land t \in s\}
 $$
