--- a/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
+++ b/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
@@ -1,4 +1,4 @@
-La estructura básica de una expresión SQL consiste en tres cláusulas: SELECT, FROM y WHERE, de la forma:
+La estructura básica de una expresión SQL consiste en tres cláusulas: `SELECT`, `FROM` y `WHERE`, de la forma:
 
 ```sql
 SELECT A1, A2, ... , An
@@ -9,7 +9,7 @@ SELECT A1, A2, ... , An
 Donde cada $A_i$ representa un atributo de una relación o tabla, $R_i$ representa cada una de las relaciones y $P$ es un predicado que se aplica a la consulta.
 
 >[!caution] Sintaxis de las Consultas SQL
->Existe un estándar que especifica todas las operaciones SQL y como es su sintaxis, pero cada implementador toma la decisión final de como será la sintaxis de su lenguaje de consulta, por lo que pueden existir una serie de diferencias en las consultas entre bases de datos y otra, aunque estas suelen ser mínimas.
+>Existe un estándar que especifica todas las operaciones SQL y como es su sintaxis, pero cada implementador toma la decisión final de como será la sintaxis de su lenguaje de consulta, por lo que pueden existir una serie de diferencias en las consultas entre bases de datos y otra, aunque estas suelen ser mínimas. Además puede que algunos implementadores decidan añadir cláusulas adicionales que faciliten algunas tareas en particular.
 
 - **SELECT**: Lista los atributos deseados en el resultado de una consulta, corresponde a la ***proyección*** del álgebra relacional.
 	- Al contrario que en el álgebra relacional, SQL permite duplicados en las relaciones, esto es así debido a una cuestión de rendimiento y eficiencia, en caso de que deseemos eliminar duplicados debemos especificarlo explícitamente, utilizando la palabra `DISTINCT`.
@@ -116,34 +116,34 @@ SELECT DISTINCT nombre_cliente
 -- Todas las sucursales que tengan un activo mayor a al menos una sucursal de
 -- Barcelona
 SELECT nombre_sucursal
-	FROM sucursal
-	WHERE activo > SOME(SELECT activo
-							FROM sucursal
-							WHERE ciudad_sucursal = 'Barcelona');
+   FROM sucursal
+   WHERE activo > SOME(SELECT activo
+						  FROM sucursal
+						  WHERE ciudad_sucursal = 'Barcelona');
 
 -- Todas las sucursales que tengan un activo mayor a todas las sucursales de
 -- Barcelona
 SELECT nombre_sucursal
-	FROM sucursal
-	WHERE activo > ALL(SELECT activo
-							FROM sucursal
-							WHERE ciudad_sucursal = 'Barcelona');
+   FROM sucursal
+   WHERE activo > ALL(SELECT activo
+						 FROM sucursal
+						 WHERE ciudad_sucursal = 'Barcelona');
 
 -- Clientes que tengan una cuenta en todas las sucursales de Barcelona
 SELECT DISTINCT S.nombre_cliente
-	FROM depositante S
-	WHERE NOT EXISTS ((SELECT nombre_sucursal
+   FROM depositante S
+   WHERE NOT EXISTS (SELECT nombre_sucursal
 						FROM sucursal
 						WHERE ciudad_sucursal = 'Barcelona')
-					EXPECT
-					  (SELECT R.nombre_sucursal
+					 EXCEPT
+					 SELECT R.nombre_sucursal
 						FROM depositante T, cuentas R
-						WHERE T.numero_cuenta = R.numero_cuenta AND
-							  S.nombre_cliente = T.nombre_cliente));
+						WHERE T.numero_cuenta = R.numero_cuenta 
+							 AND S.nombre_cliente = T.nombre_cliente);
 ```
 
 >[!note] Explicación de la Lógica de la Consulta
->La primera subconsulta obtiene todas las sucursales que pertenecen a Barcelona, la segunda subconsulta obtiene las sucursales en la que cada usuario tiene una cuenta. Con el `EXPECT`, lo que lograremos es obtener un conjunto vacío para todos los usuarios que tengan cuentas en todas las sucursales, con `NOT EXISTS` lo que conseguimos es que se agregue la relación resultante todas aquellas personas para las que se obtiene un conjunto vacío.
+>La primera subconsulta obtiene todas las sucursales que pertenecen a Barcelona, la segunda subconsulta obtiene las sucursales en la que cada usuario tiene una cuenta. Con el `EXPECT`, lo que lograremos es obtener un conjunto vacío para todos los usuarios que tengan cuentas en todas las sucursales de Barcelona, con `NOT EXISTS` obtenemos un valor verdadero si el resultado de la consulta es vacío, por lo que si el cliente tiene una cuenta en todas las sucursales de Barcelona el conjunto dará vacío, la clausula `NOT EXISTS` será verdadera y el cliente se agregará al resultado de la consulta.
 
 #### Relaciones Derivadas
 
@@ -151,10 +151,10 @@ SQL permite el uso de subconsultas en la cláusula `FROM`. En una expresión de 
 
 ```sql
 SELECT nombre_sucursal, res.saldo_medio
-	FROM (SELECT nombre_sucursal, AVG(saldo) as saldo_medio
-		FROM cuenta
-		GROUP BY nombre_sucursal) res
-	WHERE res.saldo_medio > 1200;
+   FROM (SELECT nombre_sucursal, AVG(saldo) as saldo_medio
+		    FROM cuenta
+		    GROUP BY nombre_sucursal) res
+   WHERE res.saldo_medio > 1200;
 ```
 
 En esta formulación no es necesario el uso de la cláusula `HAVING` dado que la relación temporal ***res*** se calcula en la cláusula `FROM`, y los atributos de la nueva relación de nombre ***res*** se pueden usar directamente en la cláusula `WHERE`.
@@ -172,8 +172,8 @@ En SQL los JOINs se pueden realizar de varias maneras, veamos algunos ejemplos:
 
 ```sql
 -- Reunion utilizando la cláusula ON
-prestamo INNER JOIN prestatario ON
-	prestamo.num_prestamo = prestatario.num_prestamo
+prestamo INNER JOIN 
+	prestatario ON prestamo.num_prestamo = prestatario.num_prestamo
 
 -- Reunión utilizando la cláusula USING
 prestamo INNER JOIN prestatario USING(num_prestamo)
