--- a/4º Año/Bases de Datos/Unidad 4/2. Vistas y Restricciones de Integridad.md
+++ b/4º Año/Bases de Datos/Unidad 4/2. Vistas y Restricciones de Integridad.md
@@ -8,11 +8,11 @@ Las vistas representa un conjunto de resultados de una consulta predefinida. Fun
 CREATE VIEW total_clientes AS
 	SELECT nombre_sucursal, nombre_cliente
 		FROM depositante, cuenta
-		WHERE depositante.nro_cuenta = cuenta.nro_cuenta)
+		WHERE depositante.nro_cuenta = cuenta.nro_cuenta
     UNION
 	SELECT nombre_sucursal, nombre_cliente
 	    FROM prestatario, prestamo
-		WHERE prestatario.nro_prestamo = prestamo.nro_prestamo)
+		WHERE prestatario.nro_prestamo = prestamo.nro_prestamo
 ```
 
 Cuando se define una vista, también se puede especificar el esquema que esta tendrá, además se pueden realizar operaciones de `JOIN`, y/o subconsultas, por ejemplo:
@@ -20,8 +20,8 @@ Cuando se define una vista, también se puede especificar el esquema que esta te
 ```sql
 CREATE VIEW prestamo_sucursal(nombre_sucursal, num_prestamo, ciudad_sucursal) AS
 	SELECT S.nombre_sucursal, P.nro_prestamo, S.ciudad_sucursal
-	FROM prestamo P, sucursal S
-	WHERE P.nombre_sucursal = S.nombre_sucursal
+	   FROM prestamo P, sucursal S
+	   WHERE P.nombre_sucursal = S.nombre_sucursal
 ```
 
 ### Modificación de la Base de Datos
@@ -36,8 +36,8 @@ DELETE FROM cuenta
 -- Borra todas las cuentas de la sucursales de Concoria
 DELETE FROM cuenta
 	WHERE nombre_sucursal IN (SELECT nombre_sucursal
-								FROM sucursal
-								WHERE ciudad_sucursal = 'Concordia')
+								 FROM sucursal
+								 WHERE ciudad_sucursal = 'Concordia')
 ```
 
 En caso de que deseemos insertar datos en una tabla, existen dos posibles formas de hacerlo, la primera consiste en especificar la tupla que se desea insertar utilizando constantes, y la segunda es formulando una consulta en la cual sus resultados se insertaran en la tabla especificada. En ambos casos el dominio de los atributos que se están insertando deben ser los mismos que el de los atributos definidos en la tabla, además de poseer la misma aridad que dicha tabla. Veamos algunos ejemplos:
@@ -58,16 +58,16 @@ INSERT INTO cuenta
 En el caso de que se inserten valores utilizando una consulta, se debe asegurar que dicha consulta termine antes de introducir estos datos en la tabla, porque de lo contrario puede que se introduzcan infinita cantidad de tuplas en la tabla.
 
 >[!tldr] Inserción de Valores Insuficientes
->Si no se tiene valores pata todas las columnas, en algunos casos estos se pueden omitir, ya que el gestor de la base de datos completará dichos espacios con valores por defecto, también se puede realizar este proceso de forma explícita, por ejemplo:
+>Si no se tiene valores para todas las columnas, en algunos casos estos se pueden omitir, ya que el gestor de la base de datos completará dichos espacios con valores por defecto, también se puede realizar este proceso de forma explícita, por ejemplo:
 >```sql
 >-- El gestor de la base de datos completara el valor del atributo "precio"
 >INSERT INTO producto(num_producto, nombre)
 >	VALUE (1, 'Cheese');
 >-- Para mayor claridad se puede poner estos valores de forma explícita
->INSERT INTO products (product_no, name, price)
+>INSERT INTO producto(num_producto, nombre, precio)
 >	VALUES (1, 'Cheese', DEFAULT);
 >```
->Debido que en la mayoría de los casos este tipo de consultas se realizan desde las aplicaciones, es recomendable siempre que se especifique el esquema de las tablas cuando se agreguen datos, tal y como se muestra en el ejemplo dado arriba, más aun si se agregan valores nulos o por defecto.
+>Debido que en la mayoría de los casos este tipo de consultas se realizan desde las aplicaciones, es recomendable siempre se especifique el esquema de las tablas cuando se agreguen datos, tal y como se muestra en el ejemplo dado arriba, más aun si se agregan valores nulos o por defecto.
 
 Al igual que la inserción y la eliminación de datos, SQL te permite elegir las tuplas y los atributos que se actualizarán. Esta actualización se realiza a través de la cláusula `UPDATE`, luego mediante una cláusula `SET` se especifica el nuevo valor. Veamos un par de ejemplos:
 
@@ -111,7 +111,7 @@ Las restricciones pueden aplicarse en los siguientes ámbitos:
 >[!tldr] Consideraciones para la Integridad Referencial
 >- Si hay una cadena de dependencias de claves externas entre varias relaciones, un borrado o una actualización en uno de sus extremos puede propagarse por toda la cadena.
 >- Una restricción foreign key de una relación puede hacer referencia a esa misma relación.
->- Si una actualización o borrado en cascada crea una violación de la restricción que no puede resolverse mediante una nueva operación en cascada, el sistema aborta la transacción.
+>- Si una actualización o borrado en cascada crea una violación a una restricción, la cual no puede resolverse mediante una nueva operación en cascada, el sistema aborta la transacción.
 >- Es conveniente asegurarse de que todas las columnas con especificaciones de clave foránea se declaren como no nulas.
 
 - **Asertos**: Un aserto es un predicado que expresa una condición que se desea que la base de datos satisfaga siempre. Los asertos existen, ya que muchas veces existen restricciones que no se pueden expresar utilizando únicamente restricciones de dominio y las de integridad referencial. Los asertos se crean usando la cláusula `CREATE ASSERTION` y tienen una estructura particular, vamos un ejemplo:
@@ -121,12 +121,13 @@ Las restricciones pueden aplicarse en los siguientes ámbitos:
 -- suma de todos los saldos de las cuentas en dicha sucursal
 CREATE ASSERTION restriccion_suma CHECK
 	(NOT EXISTS (
-		SELECT * FROM sucursal S
-			where
+		SELECT * 
+		   FROM sucursal S
+		   WHERE
 			 (SELECT sum(importe) FROM prestamo P
-				WHERE P.nom_sucursal = S.nom_sucursal )
+				WHERE P.nom_sucursal = S.nom_sucursal)
 			 >=
-			 (SELECT sum (saldo) FROM cuenta C
+			 (SELECT sum(saldo) FROM cuenta C
 				WHERE C.nom_sucursal = S.nom_sucursal)))
 ```
 
@@ -145,6 +146,6 @@ CREATE TRIGGER sueldo_total
 	FOR EACH ROW
 	WHEN(NEW.dni IS NOT NULL)
 		UPDATE departamento
-		SET sueldo_total = sueldo_total + NEW.sueldo
-		WHERE dni = NEW.dni
+		   SET sueldo_total = sueldo_total + NEW.sueldo
+		      WHERE dni = NEW.dni
 ```
