--- a/4º Año/Bases de Datos/Unidad 4/3. Lenguaje de Definicion de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 4/3. Lenguaje de Definicion de Datos.md
@@ -51,7 +51,7 @@ CREATE TABLE cliente(
 >```
 >Cuando se declara a un campo como clave primaria, el campo se declara automáticamente como `NOT NULL`, ya que así está definido por el estándar.
 
-SQL también te permite borrar tablas y todos los valores que estas contiene, mediante la cláusula `DROP TABLE` seguida del nombre de la tabla. Además, te permite alterar las tablas mediante la cláusula `ALTER TABLE`, mediante esta cláusula se pueden agregar nuevos atributos a las tablas, cambiar el tipo de uno o varios atributos e incluso modificar restricciones. Veamos algunos ejemplos:
+SQL también te permite borrar tablas y todos los valores que estas contiene, mediante la cláusula `DROP TABLE` seguida del nombre de la tabla. Además, te permite alterar las tablas mediante la cláusula `ALTER TABLE`, esta cláusula te permite agregar nuevos atributos a las tablas, cambiar el tipo de uno o varios atributos e incluso modificar o agregar restricciones de integridad. Veamos algunos ejemplos:
 
 ```sql
 -- Eliminación de un atributo
