--- a/4º Año/Bases de Datos/Unidad 5/1. Seguridad en Bases de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 5/1. Seguridad en Bases de Datos.md
@@ -1,5 +1,5 @@
 
-Al momento de operar una base de datos, existen una serie de factores que pueden amenazar la seguridad de esta, entre ellas se encuentra la pérdida de integridad, pérdida de disponibilidad, debido a que no se cuenta con los provilegios necesarios para acceder a los objetos, o la pérdida de confidencialidad. La confidencialidad de la base de datos tiene relación con la protección de los datos frente al acceso no autorizado.
+Al momento de operar una base de datos, existen una serie de factores que pueden amenazar la seguridad de esta, entre ellas se encuentra la pérdida de integridad, pérdida de disponibilidad, debido a que no se cuenta con los privilegios necesarios para acceder a los objetos, o la pérdida de confidencialidad. La confidencialidad de la base de datos tiene relación con la protección de los datos frente al acceso no autorizado.
 Dentro de los mecanismos que nos proporcionan las bases de datos se encuentran los controles de acceso, que le permiten a los administradores otorgar permisos a los distintos usuarios que pueden acceder a las bases de datos, este control de acceso puede ser:
 
 - **Discrecional**. Este tipo de control de acceso se basa en la idea de que los propietarios de los recursos tienen la autoridad para otorgar o restringir el acceso a otros usuarios según lo consideren necesario. Conceden privilegios a usuarios, incluyendo las capacidades de acceder a archivos de datos específicos, registros o campos en un modo determinado. Esto le permite a los distintos usuarios de las bases de datos otorgar privilegios de forma específica.
