--- a/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red.md
@@ -54,8 +54,8 @@ La recomendación X.25 del CCITT es un estándar que surgió a principios de los
 Dentro de las principales características ofrecidas por este protocolo se encuentran:
 
 - **Intercambio de información entre terminales y un nodo:** Define cómo se debe realizar el intercambio de información entre un Equipo Terminal de Datos (DTE) y un Equipo de Conexión de Datos (DCE) en una red de conmutación de paquetes.
-- **Servicio orientado a conexión:** Utiliza un servicio orientado a la conexión, como lo son los circuitos virtuales, lo que significa que establece una conexión virtual entre el emisor y el receptor antes de que comience la transmisión de datos. Este servicio garantiza el secuenciamiento de los paquetes, lo que asegura que lleguen al destino en el orden correcto. Además de 
-- **Multiplexación:** Uno de las funcionalidades más importantes que ofrece X.25 es la capacidad de establecer 4095 circuitos virtuales sobre una misma conexión física entre dos terminales, permitiendo una comunicación full-duplex entre ambos equipos, es decir, los paquetes asociados a los distintos circuitos pueden transmitirse en ambos sentidos.
+- **Servicio orientado a conexión:** Utiliza un servicio orientado a la conexión, como lo son los circuitos virtuales, lo que significa que establece una conexión virtual entre el emisor y el receptor antes de que comience la transmisión de datos. Este servicio garantiza el secuenciamiento de los paquetes, lo que asegura que lleguen al destino en el orden correcto.
+- **Multiplexación:** Uno de las funcionalidades más importantes que ofrece X.25 es la capacidad de establecer 4095 circuitos virtuales sobre una misma conexión física entre dos terminales, logrando una comunicación full-duplex entre ambos equipos, es decir, los paquetes asociados a los distintos circuitos pueden transmitirse en ambos sentidos. La manera en que logra esto es mediante la división de tiempos, donde cada canal tiene un periodo de tiempo fijo para acceder al medio físico y enviar paquetes.
 - **Control de flujo y de errores:** Este protocolo utiliza el mecanismo de ventanas deslizantes para realizar el control de flujo entre ambos extremos. Mientras que para el control de errores se utiliza la técnica de ***adelante-atrás-N***, de modo que si el nodo recibe un mensaje de que el paquete ha sido rechazado, enviará nuevamente ese paquete específico y todos los siguientes.
 
 El estándar aborda los tres primeros niveles del modelo OSI, que incluyen el nivel físico, el nivel de enlace de datos y el nivel de red. Proporciona protocolos y procedimientos para la transferencia de datos en estos niveles, lo que facilita la interoperabilidad entre diferentes sistemas y redes.
