--- a/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
@@ -1,5 +1,5 @@
 
-La fase inicial del diseño de bases de datos consiste en caracterizar completamente las necesidades de datos esperadas por los usuarios de la base de datos. El resultado de esta fase es una especificación de requisitos del usuario, los cuales quedaron documentados mediante el diagrama de datos que hayamos elegido. El resultado de esta fase es un esquema conceptual de la base de datos.
+La fase inicial del diseño de bases de datos consiste en caracterizar completamente las necesidades de datos esperadas por los usuarios de la base de datos. El resultado de esta fase es una especificación de requisitos del usuario, los cuales quedaron documentados mediante el diagrama de datos que hayamos elegido, obteniendo así un esquema conceptual de la base de datos.
 **La fase de diseño lógico**, el diseñador traduce el esquema conceptual de alto nivel al modelo de datos de implementación de la base de datos que se usará.
 **En la fase de diseño físico**, se especifican las características físicas de la base de datos a un sistema de gestión de bases de datos específico. Estas características incluyen la forma de organización de los archivos, las estructuras de almacenamiento interno, los métodos de acceso, entre otros.
 
